Continued bug fixing collision/physics system.

--- a/FlatEngine-Editor/imgui.ini
+++ b/FlatEngine-Editor/imgui.ini
@@ -16,27 +16,27 @@ DockId=0x00000005,0
 
 [Window][Hierarchy]
 Pos=0,23
-Size=293,331
+Size=293,352
 Collapsed=0
 DockId=0x00000012,0
 
 [Window][Inspector]
 Pos=1190,23
-Size=310,520
+Size=310,559
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Game View]
-Pos=893,60
-Size=296,483
+Pos=294,60
+Size=895,522
 Collapsed=0
-DockId=0x00000011,0
+DockId=0x00000006,1
 
 [Window][Scene View]
 Pos=294,60
-Size=598,483
+Size=895,522
 Collapsed=0
-DockId=0x00000010,0
+DockId=0x00000006,0
 
 [Window][Logger]
 Pos=0,544
@@ -63,14 +63,14 @@ Collapsed=0
 DockId=0x0000000B,1
 
 [Window][Animator]
-Pos=0,544
-Size=751,306
+Pos=0,583
+Size=751,267
 Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Animator/Animated Properties_4DB36E1A]
 IsChild=1
-Size=271,277
+Size=271,238
 
 [Window][1]
 Pos=978,919
@@ -84,7 +84,7 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Project Hub]
-Size=1500,850
+Size=800,500
 Collapsed=0
 
 [Window][Text Input]
@@ -146,8 +146,8 @@ IsChild=1
 Size=780,480
 
 [Window][File Explorer]
-Pos=752,544
-Size=748,306
+Pos=752,583
+Size=748,267
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -157,7 +157,7 @@ Size=432,262
 
 [Window][File Explorer/File Explorer_A202D17B/Directories Panel_86750598]
 IsChild=1
-Size=251,267
+Size=251,228
 
 [Window][File Explorer/File Explorer_A202D17B/Files Panel_F7D14BCF/FilesScrolling_6572DBDF]
 IsChild=1
@@ -283,8 +283,8 @@ Collapsed=0
 DockId=0x00000007,1
 
 [Window][Persistant GameObjects]
-Pos=0,355
-Size=293,188
+Pos=0,376
+Size=293,206
 Collapsed=0
 DockId=0x00000013,0
 
@@ -299,8 +299,8 @@ Size=525,408
 Collapsed=0
 
 [Window][Log]
-Pos=0,544
-Size=751,306
+Pos=0,583
+Size=751,267
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -448,24 +448,22 @@ Column 4  Weight=1.0000
 Column 5  Width=-1
 
 [Docking][Data]
-DockNode              ID=0x00000007 Pos=375,142 Size=550,588 Selected=0xE87781F4
-DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1500,827 Split=Y Selected=0x642CEEBB
-  DockNode            ID=0x00000001 Parent=0x8B93E3BD SizeRef=1500,520 Split=X
-    DockNode          ID=0x0000000A Parent=0x00000001 SizeRef=293,691 Split=Y Selected=0x29EABFBD
-      DockNode        ID=0x00000012 Parent=0x0000000A SizeRef=276,432 Selected=0x29EABFBD
-      DockNode        ID=0x00000013 Parent=0x0000000A SizeRef=276,246 Selected=0xA2010517
-    DockNode          ID=0x0000000D Parent=0x00000001 SizeRef=1206,691 Split=X Selected=0x08AA43A5
-      DockNode        ID=0x00000008 Parent=0x0000000D SizeRef=1315,620 Split=Y Selected=0x08AA43A5
-        DockNode      ID=0x0000000F Parent=0x00000008 SizeRef=1308,403 Split=Y Selected=0x642CEEBB
-          DockNode    ID=0x00000005 Parent=0x0000000F SizeRef=892,36 HiddenTabBar=1 Selected=0xF4A28255
-          DockNode    ID=0x00000006 Parent=0x0000000F SizeRef=892,483 Split=X Selected=0x08AA43A5
-            DockNode  ID=0x00000010 Parent=0x00000006 SizeRef=1018,642 CentralNode=1 Selected=0x08AA43A5
-            DockNode  ID=0x00000011 Parent=0x00000006 SizeRef=296,642 Selected=0x642CEEBB
-        DockNode      ID=0x00000003 Parent=0x00000008 SizeRef=1308,205 Selected=0x8E5F85DE
-      DockNode        ID=0x00000009 Parent=0x0000000D SizeRef=310,620 Selected=0xE7039252
-  DockNode            ID=0x0000000E Parent=0x8B93E3BD SizeRef=1500,306 Split=X Selected=0x0340EFE6
-    DockNode          ID=0x00000002 Parent=0x0000000E SizeRef=692,271 Selected=0x0340EFE6
-    DockNode          ID=0x00000004 Parent=0x0000000E SizeRef=807,271 Split=X Selected=0x64F50EE5
-      DockNode        ID=0x0000000B Parent=0x00000004 SizeRef=961,306 Selected=0x64F50EE5
-      DockNode        ID=0x0000000C Parent=0x00000004 SizeRef=958,306 Selected=0xCAC6E4C7
+DockNode            ID=0x00000007 Pos=375,142 Size=550,588 Selected=0xE87781F4
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1500,827 Split=Y Selected=0x642CEEBB
+  DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=1500,559 Split=X
+    DockNode        ID=0x0000000A Parent=0x00000001 SizeRef=293,691 Split=Y Selected=0x29EABFBD
+      DockNode      ID=0x00000012 Parent=0x0000000A SizeRef=276,352 Selected=0x29EABFBD
+      DockNode      ID=0x00000013 Parent=0x0000000A SizeRef=276,206 Selected=0xA2010517
+    DockNode        ID=0x0000000D Parent=0x00000001 SizeRef=1206,691 Split=X Selected=0x08AA43A5
+      DockNode      ID=0x00000008 Parent=0x0000000D SizeRef=1315,620 Split=Y Selected=0x08AA43A5
+        DockNode    ID=0x0000000F Parent=0x00000008 SizeRef=1308,403 Split=Y Selected=0x642CEEBB
+          DockNode  ID=0x00000005 Parent=0x0000000F SizeRef=892,36 HiddenTabBar=1 Selected=0xF4A28255
+          DockNode  ID=0x00000006 Parent=0x0000000F SizeRef=892,522 CentralNode=1 Selected=0x08AA43A5
+        DockNode    ID=0x00000003 Parent=0x00000008 SizeRef=1308,205 Selected=0x8E5F85DE
+      DockNode      ID=0x00000009 Parent=0x0000000D SizeRef=310,620 Selected=0xE7039252
+  DockNode          ID=0x0000000E Parent=0x8B93E3BD SizeRef=1500,267 Split=X Selected=0x0340EFE6
+    DockNode        ID=0x00000002 Parent=0x0000000E SizeRef=692,271 Selected=0x0340EFE6
+    DockNode        ID=0x00000004 Parent=0x0000000E SizeRef=807,271 Split=X Selected=0x64F50EE5
+      DockNode      ID=0x0000000B Parent=0x00000004 SizeRef=961,306 Selected=0x64F50EE5
+      DockNode      ID=0x0000000C Parent=0x00000004 SizeRef=958,306 Selected=0xCAC6E4C7
 
