Updated Box2D implementation, bug fixes

--- a/FlatEngine-Core/FlatEngine-Core.vcxproj
+++ b/FlatEngine-Core/FlatEngine-Core.vcxproj
@@ -281,22 +281,23 @@
     <ClInclude Include="..\Vendor\includes\Sol2\include\sol\version.hpp" />
     <ClInclude Include="..\Vendor\includes\Sol2\include\sol\wrapper.hpp" />
     <ClInclude Include="..\projects\ClosedLoop\scripts\cpp\Player.h" />
+    <ClInclude Include="Source\Circle.h" />
+    <ClInclude Include="Source\Box.h" />
+    <ClInclude Include="Source\Shape.h" />
     <ClInclude Include="Source\Animation.h" />
     <ClInclude Include="Source\Application.h" />
     <ClInclude Include="Source\AssetManager.h" />
     <ClInclude Include="Source\Audio.h" />
     <ClInclude Include="Source\Body.h" />
-    <ClInclude Include="Source\BoxBody.h" />
     <ClInclude Include="Source\Button.h" />
     <ClInclude Include="Source\CPPScript.h" />
     <ClInclude Include="Source\CPPScriptHeaders.h" />
     <ClInclude Include="Source\CPPScriptsHookup.h" />
     <ClInclude Include="Source\Camera.h" />
     <ClInclude Include="Source\Canvas.h" />
-    <ClInclude Include="Source\CapsuleBody.h" />
-    <ClInclude Include="Source\ChainBody.h" />
+    <ClInclude Include="Source\Capsule.h" />
+    <ClInclude Include="Source\Chain.h" />
     <ClInclude Include="Source\CharacterController.h" />
-    <ClInclude Include="Source\CircleBody.h" />
     <ClInclude Include="Source\Component.h" />
     <ClInclude Include="Source\ECSManager.h" />
     <ClInclude Include="Source\EntryPoint.h" />
@@ -308,7 +309,7 @@
     <ClInclude Include="Source\MappingContext.h" />
     <ClInclude Include="Source\Matrix.h" />
     <ClInclude Include="Source\Physics.h" />
-    <ClInclude Include="Source\PolygonBody.h" />
+    <ClInclude Include="Source\Polygon.h" />
     <ClInclude Include="Source\PrefabManager.h" />
     <ClInclude Include="Source\ProfilerProcess.h" />
     <ClInclude Include="Source\Project.h" />
@@ -342,22 +343,23 @@
     <ClCompile Include="..\Vendor\includes\ImPlot\implot_demo.cpp" />
     <ClCompile Include="..\Vendor\includes\ImPlot\implot_items.cpp" />
     <ClCompile Include="..\projects\ClosedLoop\scripts\cpp\Player.cpp" />
+    <ClCompile Include="Source\Circle.cpp" />
+    <ClCompile Include="Source\Box.cpp" />
+    <ClCompile Include="Source\Shape.cpp" />
     <ClCompile Include="Source\Animation.cpp" />
     <ClCompile Include="Source\Application.cpp" />
     <ClCompile Include="Source\AssetManager.cpp" />
     <ClCompile Include="Source\Audio.cpp" />
     <ClCompile Include="Source\Body.cpp" />
-    <ClCompile Include="Source\BoxBody.cpp" />
     <ClCompile Include="Source\Button.cpp" />
     <ClCompile Include="Source\CPPScript.cpp" />
     <ClCompile Include="Source\CPPScriptMethods.cpp" />
     <ClCompile Include="Source\CPPScriptsHookup.cpp" />
     <ClCompile Include="Source\Camera.cpp" />
     <ClCompile Include="Source\Canvas.cpp" />
-    <ClCompile Include="Source\CapsuleBody.cpp" />
-    <ClCompile Include="Source\ChainBody.cpp" />
+    <ClCompile Include="Source\Capsule.cpp" />
+    <ClCompile Include="Source\Chain.cpp" />
     <ClCompile Include="Source\CharacterController.cpp" />
-    <ClCompile Include="Source\CircleBody.cpp" />
     <ClCompile Include="Source\Component.cpp" />
     <ClCompile Include="Source\ECSManager.cpp" />
     <ClCompile Include="Source\FlatEngine.cpp" />
@@ -371,7 +373,7 @@
     <ClCompile Include="Source\MappingContext.cpp" />
     <ClCompile Include="Source\Matrix.cpp" />
     <ClCompile Include="Source\Physics.cpp" />
-    <ClCompile Include="Source\PolygonBody.cpp" />
+    <ClCompile Include="Source\Polygon.cpp" />
     <ClCompile Include="Source\PrefabManager.cpp" />
     <ClCompile Include="Source\Profiler.cpp" />
     <ClCompile Include="Source\ProfilerProcess.cpp" />
