--- a/FlatEngine-Core/FlatEngine-Core.vcxproj.filters
+++ b/FlatEngine-Core/FlatEngine-Core.vcxproj.filters
@@ -525,9 +525,6 @@
     <ClInclude Include="Source\Body.h">
       <Filter>Source</Filter>
     </ClInclude>
-    <ClInclude Include="Source\BoxBody.h">
-      <Filter>Source</Filter>
-    </ClInclude>
     <ClInclude Include="Source\Button.h">
       <Filter>Source</Filter>
     </ClInclude>
@@ -546,16 +543,13 @@
     <ClInclude Include="Source\Canvas.h">
       <Filter>Source</Filter>
     </ClInclude>
-    <ClInclude Include="Source\CapsuleBody.h">
+    <ClInclude Include="Source\Capsule.h">
       <Filter>Source</Filter>
     </ClInclude>
-    <ClInclude Include="Source\ChainBody.h">
+    <ClInclude Include="Source\Chain.h">
       <Filter>Source</Filter>
     </ClInclude>
     <ClInclude Include="Source\CharacterController.h">
-      <Filter>Source</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\CircleBody.h">
       <Filter>Source</Filter>
     </ClInclude>
     <ClInclude Include="Source\Component.h">
@@ -591,7 +585,7 @@
     <ClInclude Include="Source\Physics.h">
       <Filter>Source</Filter>
     </ClInclude>
-    <ClInclude Include="Source\PolygonBody.h">
+    <ClInclude Include="Source\Polygon.h">
       <Filter>Source</Filter>
     </ClInclude>
     <ClInclude Include="Source\PrefabManager.h">
@@ -648,6 +642,9 @@
     <ClInclude Include="Source\WindowManager.h">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Shape.h" />
+    <ClInclude Include="Source\Box.h" />
+    <ClInclude Include="Source\Circle.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Vendor\includes\ImGui\Backends\imgui_impl_sdl2.cpp">
@@ -704,9 +701,6 @@
     <ClCompile Include="Source\Body.cpp">
       <Filter>Source</Filter>
     </ClCompile>
-    <ClCompile Include="Source\BoxBody.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Button.cpp">
       <Filter>Source</Filter>
     </ClCompile>
@@ -725,16 +719,13 @@
     <ClCompile Include="Source\Canvas.cpp">
       <Filter>Source</Filter>
     </ClCompile>
-    <ClCompile Include="Source\CapsuleBody.cpp">
+    <ClCompile Include="Source\Capsule.cpp">
       <Filter>Source</Filter>
     </ClCompile>
-    <ClCompile Include="Source\ChainBody.cpp">
+    <ClCompile Include="Source\Chain.cpp">
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="Source\CharacterController.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\CircleBody.cpp">
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="Source\Component.cpp">
@@ -776,7 +767,7 @@
     <ClCompile Include="Source\Physics.cpp">
       <Filter>Source</Filter>
     </ClCompile>
-    <ClCompile Include="Source\PolygonBody.cpp">
+    <ClCompile Include="Source\Polygon.cpp">
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="Source\PrefabManager.cpp">
@@ -836,6 +827,9 @@
     <ClCompile Include="Source\WindowManager.cpp">
       <Filter>Source</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Shape.cpp" />
+    <ClCompile Include="Source\Box.cpp" />
+    <ClCompile Include="Source\Circle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Vendor\includes\Box2D\lib\box2d.lib">
