--- a/FlatEngine-Editor/imgui.ini
+++ b/FlatEngine-Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,23
-Size=1500,827
+Size=1920,986
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,31 +10,31 @@ Collapsed=0
 
 [Window][Gameloop Control Panel]
 Pos=294,23
-Size=895,36
+Size=1300,33
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Hierarchy]
 Pos=0,23
-Size=293,334
+Size=293,361
 Collapsed=0
 DockId=0x00000012,0
 
 [Window][Inspector]
-Pos=1190,23
-Size=310,534
+Pos=1595,23
+Size=325,679
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Game View]
-Pos=294,60
-Size=895,497
+Pos=294,57
+Size=1300,645
 Collapsed=0
 DockId=0x00000006,1
 
 [Window][Scene View]
-Pos=294,60
-Size=895,497
+Pos=294,57
+Size=1300,645
 Collapsed=0
 DockId=0x00000006,0
 
@@ -133,7 +133,7 @@ Size=260,80
 Collapsed=0
 
 [Window][Mapping Context Editor]
-Pos=500,165
+Pos=575,157
 Size=777,528
 Collapsed=0
 
@@ -146,8 +146,8 @@ IsChild=1
 Size=780,480
 
 [Window][File Explorer]
-Pos=667,558
-Size=833,292
+Pos=854,703
+Size=1066,306
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -157,7 +157,7 @@ Size=432,262
 
 [Window][File Explorer/File Explorer_A202D17B/Directories Panel_86750598]
 IsChild=1
-Size=251,253
+Size=251,275
 
 [Window][File Explorer/File Explorer_A202D17B/Files Panel_F7D14BCF/FilesScrolling_6572DBDF]
 IsChild=1
@@ -187,8 +187,8 @@ IsChild=1
 Size=137,241
 
 [Window][Create Mapping Context]
-Pos=815,432
-Size=270,96
+Pos=611,345
+Size=278,159
 Collapsed=0
 
 [Window][Create Animation]
@@ -283,8 +283,8 @@ Collapsed=0
 DockId=0x00000007,1
 
 [Window][Persistant GameObjects]
-Pos=0,358
-Size=293,199
+Pos=0,385
+Size=293,317
 Collapsed=0
 DockId=0x00000013,0
 
@@ -299,8 +299,8 @@ Size=525,408
 Collapsed=0
 
 [Window][Log]
-Pos=0,558
-Size=666,292
+Pos=0,703
+Size=853,306
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -449,19 +449,19 @@ Column 5  Width=-1
 
 [Docking][Data]
 DockNode            ID=0x00000007 Pos=375,142 Size=550,588 Selected=0xE87781F4
-DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1500,827 Split=Y Selected=0x642CEEBB
-  DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=1500,693 Split=X
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1920,986 Split=Y Selected=0x642CEEBB
+  DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=1500,679 Split=X
     DockNode        ID=0x0000000A Parent=0x00000001 SizeRef=293,691 Split=Y Selected=0x29EABFBD
-      DockNode      ID=0x00000012 Parent=0x0000000A SizeRef=276,434 Selected=0x29EABFBD
-      DockNode      ID=0x00000013 Parent=0x0000000A SizeRef=276,258 Selected=0xA2010517
+      DockNode      ID=0x00000012 Parent=0x0000000A SizeRef=276,361 Selected=0x29EABFBD
+      DockNode      ID=0x00000013 Parent=0x0000000A SizeRef=276,317 Selected=0xA2010517
     DockNode        ID=0x0000000D Parent=0x00000001 SizeRef=1206,691 Split=X Selected=0x08AA43A5
-      DockNode      ID=0x00000008 Parent=0x0000000D SizeRef=1315,620 Split=Y Selected=0x08AA43A5
+      DockNode      ID=0x00000008 Parent=0x0000000D SizeRef=880,620 Split=Y Selected=0x08AA43A5
         DockNode    ID=0x0000000F Parent=0x00000008 SizeRef=1308,403 Split=Y Selected=0x642CEEBB
-          DockNode  ID=0x00000005 Parent=0x0000000F SizeRef=892,36 HiddenTabBar=1 Selected=0xF4A28255
-          DockNode  ID=0x00000006 Parent=0x0000000F SizeRef=892,656 CentralNode=1 Selected=0x642CEEBB
+          DockNode  ID=0x00000005 Parent=0x0000000F SizeRef=892,33 HiddenTabBar=1 Selected=0xF4A28255
+          DockNode  ID=0x00000006 Parent=0x0000000F SizeRef=892,645 CentralNode=1 Selected=0x08AA43A5
         DockNode    ID=0x00000003 Parent=0x00000008 SizeRef=1308,205 Selected=0x8E5F85DE
-      DockNode      ID=0x00000009 Parent=0x0000000D SizeRef=310,620 Selected=0xE7039252
-  DockNode          ID=0x0000000E Parent=0x8B93E3BD SizeRef=1500,292 Split=X Selected=0x0340EFE6
+      DockNode      ID=0x00000009 Parent=0x0000000D SizeRef=325,620 Selected=0xE7039252
+  DockNode          ID=0x0000000E Parent=0x8B93E3BD SizeRef=1500,306 Split=X Selected=0x0340EFE6
     DockNode        ID=0x00000002 Parent=0x0000000E SizeRef=692,271 Selected=0x0340EFE6
     DockNode        ID=0x00000004 Parent=0x0000000E SizeRef=807,271 Split=X Selected=0x64F50EE5
       DockNode      ID=0x0000000B Parent=0x00000004 SizeRef=853,306 Selected=0x64F50EE5
