--- a/FlatEngine-Editor/imgui.ini
+++ b/FlatEngine-Editor/imgui.ini
@@ -9,34 +9,34 @@ Size=636,318
 Collapsed=0
 
 [Window][Gameloop Control Panel]
-Pos=294,23
-Size=1300,33
+Pos=0,23
+Size=310,32
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Hierarchy]
-Pos=0,23
-Size=293,361
+Pos=0,56
+Size=310,328
 Collapsed=0
-DockId=0x00000012,0
+DockId=0x00000006,0
 
 [Window][Inspector]
-Pos=1595,23
-Size=325,679
+Pos=1598,23
+Size=322,679
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Game View]
-Pos=294,57
-Size=1300,645
+Pos=311,23
+Size=1286,679
 Collapsed=0
-DockId=0x00000006,1
+DockId=0x00000008,1
 
 [Window][Scene View]
-Pos=294,57
-Size=1300,645
+Pos=311,23
+Size=1286,679
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000008,0
 
 [Window][Logger]
 Pos=0,544
@@ -48,7 +48,7 @@ DockId=0x00000002,0
 Pos=1193,23
 Size=307,520
 Collapsed=0
-DockId=0x00000009,1
+DockId=0x0000000D,1
 
 [Window][Animator Preview]
 Pos=277,364
@@ -146,8 +146,8 @@ IsChild=1
 Size=780,480
 
 [Window][File Explorer]
-Pos=854,703
-Size=1066,306
+Pos=838,703
+Size=1082,306
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -157,7 +157,7 @@ Size=432,262
 
 [Window][File Explorer/File Explorer_A202D17B/Directories Panel_86750598]
 IsChild=1
-Size=251,275
+Size=251,283
 
 [Window][File Explorer/File Explorer_A202D17B/Files Panel_F7D14BCF/FilesScrolling_6572DBDF]
 IsChild=1
@@ -284,7 +284,7 @@ DockId=0x00000007,1
 
 [Window][Persistant GameObjects]
 Pos=0,385
-Size=293,317
+Size=310,317
 Collapsed=0
 DockId=0x00000013,0
 
@@ -300,7 +300,7 @@ Collapsed=0
 
 [Window][Log]
 Pos=0,703
-Size=853,306
+Size=837,306
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -448,22 +448,22 @@ Column 4  Weight=1.0000
 Column 5  Width=-1
 
 [Docking][Data]
-DockNode            ID=0x00000007 Pos=375,142 Size=550,588 Selected=0xE87781F4
-DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1920,986 Split=Y Selected=0x642CEEBB
-  DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=1500,679 Split=X
-    DockNode        ID=0x0000000A Parent=0x00000001 SizeRef=293,691 Split=Y Selected=0x29EABFBD
-      DockNode      ID=0x00000012 Parent=0x0000000A SizeRef=276,361 Selected=0x29EABFBD
-      DockNode      ID=0x00000013 Parent=0x0000000A SizeRef=276,317 Selected=0xA2010517
-    DockNode        ID=0x0000000D Parent=0x00000001 SizeRef=1206,691 Split=X Selected=0x08AA43A5
-      DockNode      ID=0x00000008 Parent=0x0000000D SizeRef=880,620 Split=Y Selected=0x08AA43A5
-        DockNode    ID=0x0000000F Parent=0x00000008 SizeRef=1308,403 Split=Y Selected=0x642CEEBB
-          DockNode  ID=0x00000005 Parent=0x0000000F SizeRef=892,33 HiddenTabBar=1 Selected=0xF4A28255
-          DockNode  ID=0x00000006 Parent=0x0000000F SizeRef=892,645 CentralNode=1 Selected=0x08AA43A5
-        DockNode    ID=0x00000003 Parent=0x00000008 SizeRef=1308,205 Selected=0x8E5F85DE
-      DockNode      ID=0x00000009 Parent=0x0000000D SizeRef=325,620 Selected=0xE7039252
-  DockNode          ID=0x0000000E Parent=0x8B93E3BD SizeRef=1500,306 Split=X Selected=0x0340EFE6
-    DockNode        ID=0x00000002 Parent=0x0000000E SizeRef=692,271 Selected=0x0340EFE6
-    DockNode        ID=0x00000004 Parent=0x0000000E SizeRef=807,271 Split=X Selected=0x64F50EE5
-      DockNode      ID=0x0000000B Parent=0x00000004 SizeRef=853,306 Selected=0x64F50EE5
-      DockNode      ID=0x0000000C Parent=0x00000004 SizeRef=1066,306 Selected=0xCAC6E4C7
+DockNode          ID=0x00000007 Pos=375,142 Size=550,588 Selected=0xE87781F4
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1920,986 Split=Y Selected=0x642CEEBB
+  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1500,679 Split=X
+    DockNode      ID=0x0000000A Parent=0x00000001 SizeRef=310,691 Split=Y Selected=0x29EABFBD
+      DockNode    ID=0x00000012 Parent=0x0000000A SizeRef=276,361 Split=Y Selected=0x29EABFBD
+        DockNode  ID=0x00000005 Parent=0x00000012 SizeRef=295,32 HiddenTabBar=1 Selected=0xF4A28255
+        DockNode  ID=0x00000006 Parent=0x00000012 SizeRef=295,328 Selected=0x29EABFBD
+      DockNode    ID=0x00000013 Parent=0x0000000A SizeRef=276,317 Selected=0xA2010517
+    DockNode      ID=0x0000000D Parent=0x00000001 SizeRef=1609,691 Split=Y Selected=0x08AA43A5
+      DockNode    ID=0x0000000F Parent=0x0000000D SizeRef=1308,403 Split=X Selected=0x642CEEBB
+        DockNode  ID=0x00000008 Parent=0x0000000F SizeRef=1286,645 CentralNode=1 Selected=0x08AA43A5
+        DockNode  ID=0x00000009 Parent=0x0000000F SizeRef=322,645 Selected=0xE7039252
+      DockNode    ID=0x00000003 Parent=0x0000000D SizeRef=1308,205 Selected=0x8E5F85DE
+  DockNode        ID=0x0000000E Parent=0x8B93E3BD SizeRef=1500,306 Split=X Selected=0x0340EFE6
+    DockNode      ID=0x00000002 Parent=0x0000000E SizeRef=692,271 Selected=0x0340EFE6
+    DockNode      ID=0x00000004 Parent=0x0000000E SizeRef=807,271 Split=X Selected=0x64F50EE5
+      DockNode    ID=0x0000000B Parent=0x00000004 SizeRef=702,306 Selected=0x64F50EE5
+      DockNode    ID=0x0000000C Parent=0x00000004 SizeRef=907,306 Selected=0xCAC6E4C7
 
