--- a/FlatEngine-Editor/imgui.ini
+++ b/FlatEngine-Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,23
-Size=1920,986
+Size=1500,827
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,9 +10,9 @@ Collapsed=0
 
 [Window][Gameloop Control Panel]
 Pos=0,23
-Size=310,32
+Size=301,32
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000010,0
 
 [Window][Hierarchy]
 Pos=0,56
@@ -21,20 +21,20 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][Inspector]
-Pos=1598,23
-Size=322,709
+Pos=1168,23
+Size=332,532
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Game View]
-Pos=311,23
-Size=1286,709
+Pos=302,23
+Size=865,532
 Collapsed=0
 DockId=0x00000008,1
 
 [Window][Scene View]
-Pos=311,23
-Size=1286,709
+Pos=302,23
+Size=865,532
 Collapsed=0
 DockId=0x00000008,0
 
@@ -57,24 +57,24 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Keyframe Editor]
-Pos=1077,544
-Size=423,306
+Pos=833,556
+Size=124,294
 Collapsed=0
-DockId=0x0000000B,1
+DockId=0x00000015,0
 
 [Window][Animator]
-Pos=0,571
-Size=541,279
+Pos=562,556
+Size=270,294
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000014,1
 
 [Window][Animator/Animated Properties_4DB36E1A]
 IsChild=1
-Size=271,250
+Size=229,265
 
 [Window][1]
-Pos=978,919
-Size=10,10
+Pos=317,918
+Size=136,23
 Collapsed=0
 
 [Window][Dear ImGui Demo]
@@ -118,8 +118,8 @@ Size=260,95
 Collapsed=0
 
 [Window][Create Lua Script]
-Pos=620,345
-Size=260,159
+Pos=830,426
+Size=260,157
 Collapsed=0
 
 [Window][##CreateNewLuaScriptModal]
@@ -146,8 +146,8 @@ IsChild=1
 Size=780,480
 
 [Window][File Explorer]
-Pos=838,733
-Size=1082,276
+Pos=958,556
+Size=542,294
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -157,7 +157,7 @@ Size=432,262
 
 [Window][File Explorer/File Explorer_A202D17B/Directories Panel_86750598]
 IsChild=1
-Size=251,253
+Size=237,271
 
 [Window][File Explorer/File Explorer_A202D17B/Files Panel_F7D14BCF/FilesScrolling_6572DBDF]
 IsChild=1
@@ -192,8 +192,8 @@ Size=278,159
 Collapsed=0
 
 [Window][Create Animation]
-Pos=820,420
-Size=260,159
+Pos=830,426
+Size=260,157
 Collapsed=0
 
 [Window][Create Scene]
@@ -239,14 +239,14 @@ IsChild=1
 Size=245,289
 
 [Window][Tileset Editor]
-Pos=0,570
-Size=563,280
+Pos=0,556
+Size=561,294
 Collapsed=0
-DockId=0x00000002,1
+DockId=0x00000002,0
 
 [Window][Tileset Editor/Tileset Editor_C04F5ECD/Toolbar_4D912FCE]
 IsChild=1
-Size=193,241
+Size=193,271
 
 [Window][Create New TileSet]
 Pos=620,335
@@ -283,8 +283,8 @@ Collapsed=0
 DockId=0x00000007,1
 
 [Window][Persistant GameObjects]
-Pos=0,385
-Size=310,347
+Pos=0,337
+Size=301,218
 Collapsed=0
 DockId=0x00000013,0
 
@@ -299,10 +299,10 @@ Size=525,408
 Collapsed=0
 
 [Window][Log]
-Pos=0,733
-Size=837,276
+Pos=562,556
+Size=270,294
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000014,0
 
 [Window][Create Script]
 Pos=830,425
@@ -312,6 +312,25 @@ Collapsed=0
 [Window][Create C++ Script]
 Pos=620,345
 Size=260,159
+Collapsed=0
+
+[Window][Scene GameObjects]
+Pos=0,56
+Size=301,280
+Collapsed=0
+DockId=0x00000011,0
+
+[Window][Animator/Animator_57EA216E/Animated Properties_0E80DA04]
+IsChild=1
+Size=237,271
+
+[Window][Animator/Animator_57EA216E/Animated Properties_0E80DA04/Manage Animation_CF029C7C]
+IsChild=1
+Size=186,263
+
+[Window][Create TileSet]
+Pos=620,346
+Size=260,157
 Collapsed=0
 
 [Table][0xDE426162,3]
@@ -448,22 +467,26 @@ Column 4  Weight=1.0000
 Column 5  Width=-1
 
 [Docking][Data]
-DockNode          ID=0x00000007 Pos=375,142 Size=550,588 Selected=0xE87781F4
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1920,986 Split=Y Selected=0x642CEEBB
-  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1500,709 Split=X
-    DockNode      ID=0x0000000A Parent=0x00000001 SizeRef=310,691 Split=Y Selected=0x29EABFBD
-      DockNode    ID=0x00000012 Parent=0x0000000A SizeRef=276,361 Split=Y Selected=0x29EABFBD
-        DockNode  ID=0x00000005 Parent=0x00000012 SizeRef=310,32 HiddenTabBar=1 Selected=0xF4A28255
-        DockNode  ID=0x00000006 Parent=0x00000012 SizeRef=310,328 Selected=0x29EABFBD
-      DockNode    ID=0x00000013 Parent=0x0000000A SizeRef=276,347 Selected=0xA2010517
-    DockNode      ID=0x0000000D Parent=0x00000001 SizeRef=1609,691 Split=Y Selected=0x08AA43A5
-      DockNode    ID=0x0000000F Parent=0x0000000D SizeRef=1308,403 Split=X Selected=0x642CEEBB
-        DockNode  ID=0x00000008 Parent=0x0000000F SizeRef=1286,645 CentralNode=1 Selected=0x08AA43A5
-        DockNode  ID=0x00000009 Parent=0x0000000F SizeRef=322,645 Selected=0xE7039252
-      DockNode    ID=0x00000003 Parent=0x0000000D SizeRef=1308,205 Selected=0x8E5F85DE
-  DockNode        ID=0x0000000E Parent=0x8B93E3BD SizeRef=1500,276 Split=X Selected=0x0340EFE6
-    DockNode      ID=0x00000002 Parent=0x0000000E SizeRef=692,271 Selected=0x0340EFE6
-    DockNode      ID=0x00000004 Parent=0x0000000E SizeRef=807,271 Split=X Selected=0x64F50EE5
-      DockNode    ID=0x0000000B Parent=0x00000004 SizeRef=702,306 Selected=0x64F50EE5
-      DockNode    ID=0x0000000C Parent=0x00000004 SizeRef=907,306 Selected=0xCAC6E4C7
+DockNode            ID=0x00000007 Pos=375,142 Size=550,588 Selected=0xE87781F4
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1500,827 Split=Y Selected=0x642CEEBB
+  DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=1500,691 Split=X
+    DockNode        ID=0x0000000A Parent=0x00000001 SizeRef=301,691 Split=Y Selected=0x29EABFBD
+      DockNode      ID=0x00000012 Parent=0x0000000A SizeRef=276,407 Split=Y Selected=0x29EABFBD
+        DockNode    ID=0x00000005 Parent=0x00000012 SizeRef=310,32 Split=Y Selected=0xF4A28255
+          DockNode  ID=0x00000010 Parent=0x00000005 SizeRef=310,32 HiddenTabBar=1 Selected=0xF4A28255
+          DockNode  ID=0x00000011 Parent=0x00000005 SizeRef=310,374 Selected=0x7AD9D477
+        DockNode    ID=0x00000006 Parent=0x00000012 SizeRef=310,328 Selected=0x29EABFBD
+      DockNode      ID=0x00000013 Parent=0x0000000A SizeRef=276,283 Selected=0xA2010517
+    DockNode        ID=0x0000000D Parent=0x00000001 SizeRef=1198,691 Split=Y Selected=0x08AA43A5
+      DockNode      ID=0x0000000F Parent=0x0000000D SizeRef=1308,403 Split=X Selected=0x642CEEBB
+        DockNode    ID=0x00000008 Parent=0x0000000F SizeRef=865,645 CentralNode=1 Selected=0x08AA43A5
+        DockNode    ID=0x00000009 Parent=0x0000000F SizeRef=332,645 Selected=0xE7039252
+      DockNode      ID=0x00000003 Parent=0x0000000D SizeRef=1308,205 Selected=0x8E5F85DE
+  DockNode          ID=0x0000000E Parent=0x8B93E3BD SizeRef=1500,294 Split=X Selected=0x0340EFE6
+    DockNode        ID=0x00000002 Parent=0x0000000E SizeRef=561,271 Selected=0x5DBB0DC8
+    DockNode        ID=0x00000004 Parent=0x0000000E SizeRef=938,271 Split=X Selected=0x64F50EE5
+      DockNode      ID=0x0000000B Parent=0x00000004 SizeRef=808,306 Split=X Selected=0x843B4BFE
+        DockNode    ID=0x00000014 Parent=0x0000000B SizeRef=600,262 Selected=0x64F50EE5
+        DockNode    ID=0x00000015 Parent=0x0000000B SizeRef=274,262 Selected=0xED03171C
+      DockNode      ID=0x0000000C Parent=0x00000004 SizeRef=1111,306 Selected=0xCAC6E4C7
 
