Bug fixes, UI improvements.

--- a/FlatEngine-Editor/imgui.ini
+++ b/FlatEngine-Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,23
-Size=1500,827
+Size=1920,986
 Collapsed=0
 
 [Window][Debug##Default]
@@ -21,20 +21,20 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][Inspector]
-Pos=1168,23
-Size=332,532
+Pos=1588,23
+Size=332,691
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Game View]
 Pos=302,23
-Size=865,532
+Size=1285,691
 Collapsed=0
 DockId=0x00000008,1
 
 [Window][Scene View]
 Pos=302,23
-Size=865,532
+Size=1285,691
 Collapsed=0
 DockId=0x00000008,0
 
@@ -42,7 +42,7 @@ DockId=0x00000008,0
 Pos=0,544
 Size=692,306
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x0000000E,0
 
 [Window][Profiler]
 Pos=1193,23
@@ -57,16 +57,16 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Keyframe Editor]
-Pos=833,556
-Size=124,294
+Pos=529,556
+Size=197,294
 Collapsed=0
-DockId=0x00000015,0
+DockId=0x00000004,0
 
 [Window][Animator]
-Pos=562,556
-Size=270,294
+Pos=0,715
+Size=904,294
 Collapsed=0
-DockId=0x00000014,1
+DockId=0x00000002,1
 
 [Window][Animator/Animated Properties_4DB36E1A]
 IsChild=1
@@ -118,7 +118,7 @@ Size=260,95
 Collapsed=0
 
 [Window][Create Lua Script]
-Pos=830,426
+Pos=620,346
 Size=260,157
 Collapsed=0
 
@@ -146,8 +146,8 @@ IsChild=1
 Size=780,480
 
 [Window][File Explorer]
-Pos=958,556
-Size=542,294
+Pos=905,715
+Size=1015,294
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -239,10 +239,10 @@ IsChild=1
 Size=245,289
 
 [Window][Tileset Editor]
-Pos=0,556
-Size=561,294
+Pos=0,715
+Size=904,294
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000002,2
 
 [Window][Tileset Editor/Tileset Editor_C04F5ECD/Toolbar_4D912FCE]
 IsChild=1
@@ -283,8 +283,8 @@ Collapsed=0
 DockId=0x00000007,1
 
 [Window][Persistant GameObjects]
-Pos=0,337
-Size=301,218
+Pos=0,431
+Size=301,283
 Collapsed=0
 DockId=0x00000013,0
 
@@ -299,10 +299,10 @@ Size=525,408
 Collapsed=0
 
 [Window][Log]
-Pos=562,556
-Size=270,294
+Pos=0,715
+Size=904,294
 Collapsed=0
-DockId=0x00000014,0
+DockId=0x00000002,0
 
 [Window][Create Script]
 Pos=830,425
@@ -316,7 +316,7 @@ Collapsed=0
 
 [Window][Scene GameObjects]
 Pos=0,56
-Size=301,280
+Size=301,374
 Collapsed=0
 DockId=0x00000011,0
 
@@ -468,7 +468,7 @@ Column 5  Width=-1
 
 [Docking][Data]
 DockNode            ID=0x00000007 Pos=375,142 Size=550,588 Selected=0xE87781F4
-DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1500,827 Split=Y Selected=0x642CEEBB
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1920,986 Split=Y Selected=0x642CEEBB
   DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=1500,691 Split=X
     DockNode        ID=0x0000000A Parent=0x00000001 SizeRef=301,691 Split=Y Selected=0x29EABFBD
       DockNode      ID=0x00000012 Parent=0x0000000A SizeRef=276,407 Split=Y Selected=0x29EABFBD
@@ -483,10 +483,8 @@ DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1500,827 Split
         DockNode    ID=0x00000009 Parent=0x0000000F SizeRef=332,645 Selected=0xE7039252
       DockNode      ID=0x00000003 Parent=0x0000000D SizeRef=1308,205 Selected=0x8E5F85DE
   DockNode          ID=0x0000000E Parent=0x8B93E3BD SizeRef=1500,294 Split=X Selected=0x0340EFE6
-    DockNode        ID=0x00000002 Parent=0x0000000E SizeRef=561,271 Selected=0x5DBB0DC8
-    DockNode        ID=0x00000004 Parent=0x0000000E SizeRef=938,271 Split=X Selected=0x64F50EE5
-      DockNode      ID=0x0000000B Parent=0x00000004 SizeRef=808,306 Split=X Selected=0x843B4BFE
-        DockNode    ID=0x00000014 Parent=0x0000000B SizeRef=600,262 Selected=0x64F50EE5
-        DockNode    ID=0x00000015 Parent=0x0000000B SizeRef=274,262 Selected=0xED03171C
-      DockNode      ID=0x0000000C Parent=0x00000004 SizeRef=1111,306 Selected=0xCAC6E4C7
+    DockNode        ID=0x0000000B Parent=0x0000000E SizeRef=706,306 Split=X Selected=0x843B4BFE
+      DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=528,294 Selected=0x64F50EE5
+      DockNode      ID=0x00000004 Parent=0x0000000B SizeRef=197,294 Selected=0xED03171C
+    DockNode        ID=0x0000000C Parent=0x0000000E SizeRef=793,306 Selected=0xCAC6E4C7
 
