Finished up C++ script implementation, bug fixes, UI updates.

--- a/FlatEngine-Editor/imgui.ini
+++ b/FlatEngine-Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,23
-Size=1920,986
+Size=1500,827
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Gameloop Control Panel]
 Pos=0,23
-Size=301,32
+Size=309,32
 Collapsed=0
 DockId=0x00000010,0
 
@@ -21,20 +21,20 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][Inspector]
-Pos=1588,23
-Size=332,691
+Pos=1168,23
+Size=332,532
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Game View]
-Pos=302,23
-Size=1285,691
+Pos=310,23
+Size=857,532
 Collapsed=0
 DockId=0x00000008,1
 
 [Window][Scene View]
-Pos=302,23
-Size=1285,691
+Pos=310,23
+Size=857,532
 Collapsed=0
 DockId=0x00000008,0
 
@@ -57,14 +57,14 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Keyframe Editor]
-Pos=529,556
-Size=197,294
+Pos=534,556
+Size=319,294
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Animator]
-Pos=0,715
-Size=904,294
+Pos=0,556
+Size=533,294
 Collapsed=0
 DockId=0x00000002,1
 
@@ -73,7 +73,7 @@ IsChild=1
 Size=229,265
 
 [Window][1]
-Pos=317,918
+Pos=350,674
 Size=136,23
 Collapsed=0
 
@@ -118,8 +118,8 @@ Size=260,95
 Collapsed=0
 
 [Window][Create Lua Script]
-Pos=620,346
-Size=260,157
+Pos=832,446
+Size=255,117
 Collapsed=0
 
 [Window][##CreateNewLuaScriptModal]
@@ -146,8 +146,8 @@ IsChild=1
 Size=780,480
 
 [Window][File Explorer]
-Pos=905,715
-Size=1015,294
+Pos=854,556
+Size=646,294
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -239,18 +239,18 @@ IsChild=1
 Size=245,289
 
 [Window][Tileset Editor]
-Pos=0,715
-Size=904,294
+Pos=0,556
+Size=533,294
 Collapsed=0
 DockId=0x00000002,2
 
 [Window][Tileset Editor/Tileset Editor_C04F5ECD/Toolbar_4D912FCE]
 IsChild=1
-Size=193,271
+Size=317,271
 
 [Window][Create New TileSet]
-Pos=620,335
-Size=260,179
+Pos=600,317
+Size=255,117
 Collapsed=0
 
 [Window][Cursor Mode Select]
@@ -283,8 +283,8 @@ Collapsed=0
 DockId=0x00000007,1
 
 [Window][Persistant GameObjects]
-Pos=0,431
-Size=301,283
+Pos=0,337
+Size=309,218
 Collapsed=0
 DockId=0x00000013,0
 
@@ -299,8 +299,8 @@ Size=525,408
 Collapsed=0
 
 [Window][Log]
-Pos=0,715
-Size=904,294
+Pos=0,556
+Size=533,294
 Collapsed=0
 DockId=0x00000002,0
 
@@ -316,13 +316,13 @@ Collapsed=0
 
 [Window][Scene GameObjects]
 Pos=0,56
-Size=301,374
+Size=309,280
 Collapsed=0
 DockId=0x00000011,0
 
 [Window][Animator/Animator_57EA216E/Animated Properties_0E80DA04]
 IsChild=1
-Size=237,271
+Size=226,271
 
 [Window][Animator/Animator_57EA216E/Animated Properties_0E80DA04/Manage Animation_CF029C7C]
 IsChild=1
@@ -468,23 +468,23 @@ Column 5  Width=-1
 
 [Docking][Data]
 DockNode            ID=0x00000007 Pos=375,142 Size=550,588 Selected=0xE87781F4
-DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1920,986 Split=Y Selected=0x642CEEBB
-  DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=1500,691 Split=X
-    DockNode        ID=0x0000000A Parent=0x00000001 SizeRef=301,691 Split=Y Selected=0x29EABFBD
-      DockNode      ID=0x00000012 Parent=0x0000000A SizeRef=276,407 Split=Y Selected=0x29EABFBD
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1500,827 Split=Y Selected=0x642CEEBB
+  DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=1500,532 Split=X
+    DockNode        ID=0x0000000A Parent=0x00000001 SizeRef=309,691 Split=Y Selected=0x29EABFBD
+      DockNode      ID=0x00000012 Parent=0x0000000A SizeRef=276,313 Split=Y Selected=0x29EABFBD
         DockNode    ID=0x00000005 Parent=0x00000012 SizeRef=310,32 Split=Y Selected=0xF4A28255
           DockNode  ID=0x00000010 Parent=0x00000005 SizeRef=310,32 HiddenTabBar=1 Selected=0xF4A28255
           DockNode  ID=0x00000011 Parent=0x00000005 SizeRef=310,374 Selected=0x7AD9D477
         DockNode    ID=0x00000006 Parent=0x00000012 SizeRef=310,328 Selected=0x29EABFBD
-      DockNode      ID=0x00000013 Parent=0x0000000A SizeRef=276,283 Selected=0xA2010517
-    DockNode        ID=0x0000000D Parent=0x00000001 SizeRef=1198,691 Split=Y Selected=0x08AA43A5
+      DockNode      ID=0x00000013 Parent=0x0000000A SizeRef=276,218 Selected=0xA2010517
+    DockNode        ID=0x0000000D Parent=0x00000001 SizeRef=1190,691 Split=Y Selected=0x08AA43A5
       DockNode      ID=0x0000000F Parent=0x0000000D SizeRef=1308,403 Split=X Selected=0x642CEEBB
-        DockNode    ID=0x00000008 Parent=0x0000000F SizeRef=865,645 CentralNode=1 Selected=0x08AA43A5
+        DockNode    ID=0x00000008 Parent=0x0000000F SizeRef=857,645 CentralNode=1 Selected=0x08AA43A5
         DockNode    ID=0x00000009 Parent=0x0000000F SizeRef=332,645 Selected=0xE7039252
       DockNode      ID=0x00000003 Parent=0x0000000D SizeRef=1308,205 Selected=0x8E5F85DE
   DockNode          ID=0x0000000E Parent=0x8B93E3BD SizeRef=1500,294 Split=X Selected=0x0340EFE6
-    DockNode        ID=0x0000000B Parent=0x0000000E SizeRef=706,306 Split=X Selected=0x843B4BFE
-      DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=528,294 Selected=0x64F50EE5
-      DockNode      ID=0x00000004 Parent=0x0000000B SizeRef=197,294 Selected=0xED03171C
-    DockNode        ID=0x0000000C Parent=0x0000000E SizeRef=793,306 Selected=0xCAC6E4C7
+    DockNode        ID=0x0000000B Parent=0x0000000E SizeRef=853,306 Split=X Selected=0x843B4BFE
+      DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=533,294 Selected=0x843B4BFE
+      DockNode      ID=0x00000004 Parent=0x0000000B SizeRef=319,294 Selected=0xED03171C
+    DockNode        ID=0x0000000C Parent=0x0000000E SizeRef=646,306 Selected=0xCAC6E4C7
 
