UX/UI updates, bug fixes.

--- a/FlatEngine-Editor/imgui.ini
+++ b/FlatEngine-Editor/imgui.ini
@@ -57,14 +57,14 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Keyframe Editor]
-Pos=534,556
-Size=319,294
+Pos=507,556
+Size=206,294
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Animator]
 Pos=0,556
-Size=533,294
+Size=506,294
 Collapsed=0
 DockId=0x00000002,1
 
@@ -84,6 +84,7 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Project Hub]
+Pos=0,0
 Size=800,500
 Collapsed=0
 
@@ -118,7 +119,7 @@ Size=260,95
 Collapsed=0
 
 [Window][Create Lua Script]
-Pos=832,446
+Pos=622,366
 Size=255,117
 Collapsed=0
 
@@ -133,7 +134,7 @@ Size=260,80
 Collapsed=0
 
 [Window][Mapping Context Editor]
-Pos=575,157
+Pos=411,135
 Size=777,528
 Collapsed=0
 
@@ -146,8 +147,8 @@ IsChild=1
 Size=780,480
 
 [Window][File Explorer]
-Pos=854,556
-Size=646,294
+Pos=714,556
+Size=786,294
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -178,13 +179,13 @@ Size=800,500
 Collapsed=0
 
 [Window][Settings]
-Pos=373,201
+Pos=563,298
 Size=794,280
 Collapsed=0
 
 [Window][Settings/Settings_C140F0A3/EngineSettings_CD1686D3]
 IsChild=1
-Size=137,241
+Size=137,257
 
 [Window][Create Mapping Context]
 Pos=611,345
@@ -217,8 +218,8 @@ Size=255,69
 Collapsed=0
 
 [Window][Create New Project]
-Pos=620,345
-Size=260,159
+Pos=272,191
+Size=255,117
 Collapsed=0
 
 [Window][TileSetEditor]
@@ -240,7 +241,7 @@ Size=245,289
 
 [Window][Tileset Editor]
 Pos=0,556
-Size=533,294
+Size=506,294
 Collapsed=0
 DockId=0x00000002,2
 
@@ -300,7 +301,7 @@ Collapsed=0
 
 [Window][Log]
 Pos=0,556
-Size=533,294
+Size=506,294
 Collapsed=0
 DockId=0x00000002,0
 
@@ -479,12 +480,12 @@ DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1500,827 Split
       DockNode      ID=0x00000013 Parent=0x0000000A SizeRef=276,218 Selected=0xA2010517
     DockNode        ID=0x0000000D Parent=0x00000001 SizeRef=1190,691 Split=Y Selected=0x08AA43A5
       DockNode      ID=0x0000000F Parent=0x0000000D SizeRef=1308,403 Split=X Selected=0x642CEEBB
-        DockNode    ID=0x00000008 Parent=0x0000000F SizeRef=857,645 CentralNode=1 Selected=0x08AA43A5
+        DockNode    ID=0x00000008 Parent=0x0000000F SizeRef=857,645 CentralNode=1 Selected=0x642CEEBB
         DockNode    ID=0x00000009 Parent=0x0000000F SizeRef=332,645 Selected=0xE7039252
       DockNode      ID=0x00000003 Parent=0x0000000D SizeRef=1308,205 Selected=0x8E5F85DE
   DockNode          ID=0x0000000E Parent=0x8B93E3BD SizeRef=1500,294 Split=X Selected=0x0340EFE6
-    DockNode        ID=0x0000000B Parent=0x0000000E SizeRef=853,306 Split=X Selected=0x843B4BFE
-      DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=533,294 Selected=0x843B4BFE
-      DockNode      ID=0x00000004 Parent=0x0000000B SizeRef=319,294 Selected=0xED03171C
-    DockNode        ID=0x0000000C Parent=0x0000000E SizeRef=646,306 Selected=0xCAC6E4C7
+    DockNode        ID=0x0000000B Parent=0x0000000E SizeRef=713,306 Split=X Selected=0x843B4BFE
+      DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=683,294 Selected=0x64F50EE5
+      DockNode      ID=0x00000004 Parent=0x0000000B SizeRef=278,294 Selected=0xED03171C
+    DockNode        ID=0x0000000C Parent=0x0000000E SizeRef=786,306 Selected=0xCAC6E4C7
 
