--- a/FlatEngine-Editor/imgui.ini
+++ b/FlatEngine-Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,23
-Size=1500,827
+Size=1920,986
 Collapsed=0
 
 [Window][Debug##Default]
@@ -21,20 +21,20 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][Inspector]
-Pos=1168,23
-Size=332,532
+Pos=1588,23
+Size=332,691
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Game View]
 Pos=310,23
-Size=857,532
+Size=1277,691
 Collapsed=0
 DockId=0x00000008,1
 
 [Window][Scene View]
 Pos=310,23
-Size=857,532
+Size=1277,691
 Collapsed=0
 DockId=0x00000008,0
 
@@ -57,14 +57,14 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Keyframe Editor]
-Pos=507,556
-Size=206,294
+Pos=728,715
+Size=258,294
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Animator]
-Pos=0,556
-Size=506,294
+Pos=0,715
+Size=727,294
 Collapsed=0
 DockId=0x00000002,1
 
@@ -73,7 +73,7 @@ IsChild=1
 Size=229,265
 
 [Window][1]
-Pos=350,674
+Pos=254,937
 Size=136,23
 Collapsed=0
 
@@ -119,7 +119,7 @@ Size=260,95
 Collapsed=0
 
 [Window][Create Lua Script]
-Pos=622,366
+Pos=832,446
 Size=255,117
 Collapsed=0
 
@@ -134,7 +134,7 @@ Size=260,80
 Collapsed=0
 
 [Window][Mapping Context Editor]
-Pos=411,135
+Pos=308,125
 Size=777,528
 Collapsed=0
 
@@ -147,8 +147,8 @@ IsChild=1
 Size=780,480
 
 [Window][File Explorer]
-Pos=714,556
-Size=786,294
+Pos=987,715
+Size=933,294
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -158,7 +158,7 @@ Size=432,262
 
 [Window][File Explorer/File Explorer_A202D17B/Directories Panel_86750598]
 IsChild=1
-Size=237,271
+Size=260,271
 
 [Window][File Explorer/File Explorer_A202D17B/Files Panel_F7D14BCF/FilesScrolling_6572DBDF]
 IsChild=1
@@ -188,13 +188,13 @@ IsChild=1
 Size=137,257
 
 [Window][Create Mapping Context]
-Pos=611,345
-Size=278,159
+Pos=619,366
+Size=262,117
 Collapsed=0
 
 [Window][Create Animation]
-Pos=830,426
-Size=260,157
+Pos=832,446
+Size=255,117
 Collapsed=0
 
 [Window][Create Scene]
@@ -241,7 +241,7 @@ Size=245,289
 
 [Window][Tileset Editor]
 Pos=0,556
-Size=506,294
+Size=426,294
 Collapsed=0
 DockId=0x00000002,2
 
@@ -264,8 +264,8 @@ IsChild=1
 Size=1900,567
 
 [Window][Create Prefab]
-Pos=830,435
-Size=260,139
+Pos=832,450
+Size=255,109
 Collapsed=0
 
 [Window][PopupModal]
@@ -284,8 +284,8 @@ Collapsed=0
 DockId=0x00000007,1
 
 [Window][Persistant GameObjects]
-Pos=0,337
-Size=309,218
+Pos=0,431
+Size=309,283
 Collapsed=0
 DockId=0x00000013,0
 
@@ -300,8 +300,8 @@ Size=525,408
 Collapsed=0
 
 [Window][Log]
-Pos=0,556
-Size=506,294
+Pos=0,715
+Size=727,294
 Collapsed=0
 DockId=0x00000002,0
 
@@ -317,7 +317,7 @@ Collapsed=0
 
 [Window][Scene GameObjects]
 Pos=0,56
-Size=309,280
+Size=309,374
 Collapsed=0
 DockId=0x00000011,0
 
@@ -469,7 +469,7 @@ Column 5  Width=-1
 
 [Docking][Data]
 DockNode            ID=0x00000007 Pos=375,142 Size=550,588 Selected=0xE87781F4
-DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1500,827 Split=Y Selected=0x642CEEBB
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1920,986 Split=Y Selected=0x642CEEBB
   DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=1500,532 Split=X
     DockNode        ID=0x0000000A Parent=0x00000001 SizeRef=309,691 Split=Y Selected=0x29EABFBD
       DockNode      ID=0x00000012 Parent=0x0000000A SizeRef=276,313 Split=Y Selected=0x29EABFBD
@@ -480,12 +480,12 @@ DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1500,827 Split
       DockNode      ID=0x00000013 Parent=0x0000000A SizeRef=276,218 Selected=0xA2010517
     DockNode        ID=0x0000000D Parent=0x00000001 SizeRef=1190,691 Split=Y Selected=0x08AA43A5
       DockNode      ID=0x0000000F Parent=0x0000000D SizeRef=1308,403 Split=X Selected=0x642CEEBB
-        DockNode    ID=0x00000008 Parent=0x0000000F SizeRef=857,645 CentralNode=1 Selected=0x642CEEBB
+        DockNode    ID=0x00000008 Parent=0x0000000F SizeRef=857,645 CentralNode=1 Selected=0x08AA43A5
         DockNode    ID=0x00000009 Parent=0x0000000F SizeRef=332,645 Selected=0xE7039252
       DockNode      ID=0x00000003 Parent=0x0000000D SizeRef=1308,205 Selected=0x8E5F85DE
   DockNode          ID=0x0000000E Parent=0x8B93E3BD SizeRef=1500,294 Split=X Selected=0x0340EFE6
-    DockNode        ID=0x0000000B Parent=0x0000000E SizeRef=713,306 Split=X Selected=0x843B4BFE
-      DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=683,294 Selected=0x64F50EE5
-      DockNode      ID=0x00000004 Parent=0x0000000B SizeRef=278,294 Selected=0xED03171C
-    DockNode        ID=0x0000000C Parent=0x0000000E SizeRef=786,306 Selected=0xCAC6E4C7
+    DockNode        ID=0x0000000B Parent=0x0000000E SizeRef=986,306 Split=X Selected=0x843B4BFE
+      DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=727,294 Selected=0x843B4BFE
+      DockNode      ID=0x00000004 Parent=0x0000000B SizeRef=258,294 Selected=0xED03171C
+    DockNode        ID=0x0000000C Parent=0x0000000E SizeRef=933,306 Selected=0xCAC6E4C7
 
