--- a/FlatEngine-Editor/imgui.ini
+++ b/FlatEngine-Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,23
-Size=1920,1017
+Size=1920,986
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Gameloop Control Panel]
 Pos=0,23
-Size=318,33
+Size=314,32
 Collapsed=0
 DockId=0x00000010,0
 
@@ -22,19 +22,19 @@ DockId=0x00000006,0
 
 [Window][Inspector]
 Pos=1570,23
-Size=350,823
+Size=350,748
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Game View]
-Pos=319,23
-Size=1250,823
+Pos=315,23
+Size=1254,748
 Collapsed=0
 DockId=0x00000008,1
 
 [Window][Scene View]
-Pos=319,23
-Size=1250,823
+Pos=315,23
+Size=1254,748
 Collapsed=0
 DockId=0x00000008,0
 
@@ -57,14 +57,14 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Keyframe Editor]
-Pos=728,847
-Size=258,193
+Pos=728,772
+Size=258,237
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Animator]
-Pos=0,847
-Size=727,193
+Pos=0,772
+Size=727,237
 Collapsed=0
 DockId=0x00000002,0
 
@@ -147,8 +147,8 @@ IsChild=1
 Size=780,480
 
 [Window][File Explorer]
-Pos=987,847
-Size=933,193
+Pos=987,772
+Size=933,237
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -158,7 +158,7 @@ Size=432,262
 
 [Window][File Explorer/File Explorer_A202D17B/Directories Panel_86750598]
 IsChild=1
-Size=260,170
+Size=260,214
 
 [Window][File Explorer/File Explorer_A202D17B/Files Panel_F7D14BCF/FilesScrolling_6572DBDF]
 IsChild=1
@@ -198,7 +198,7 @@ Size=255,117
 Collapsed=0
 
 [Window][Create Scene]
-Pos=832,461
+Pos=832,446
 Size=255,117
 Collapsed=0
 
@@ -213,7 +213,7 @@ Size=299,179
 Collapsed=0
 
 [Window][Are You Sure?]
-Pos=622,390
+Pos=832,470
 Size=255,69
 Collapsed=0
 
@@ -240,14 +240,14 @@ IsChild=1
 Size=245,289
 
 [Window][Tileset Editor]
-Pos=0,736
-Size=727,304
+Pos=0,803
+Size=727,237
 Collapsed=0
 DockId=0x00000002,2
 
 [Window][Tileset Editor/Tileset Editor_C04F5ECD/Toolbar_4D912FCE]
 IsChild=1
-Size=317,281
+Size=317,214
 
 [Window][Create New TileSet]
 Pos=600,317
@@ -284,8 +284,8 @@ Collapsed=0
 DockId=0x00000007,1
 
 [Window][Persistant GameObjects]
-Pos=0,407
-Size=318,439
+Pos=0,392
+Size=314,379
 Collapsed=0
 DockId=0x00000013,0
 
@@ -300,8 +300,8 @@ Size=525,408
 Collapsed=0
 
 [Window][Log]
-Pos=0,847
-Size=727,193
+Pos=0,772
+Size=727,237
 Collapsed=0
 DockId=0x00000002,1
 
@@ -316,14 +316,14 @@ Size=255,117
 Collapsed=0
 
 [Window][Scene GameObjects]
-Pos=0,57
-Size=318,349
+Pos=0,56
+Size=314,335
 Collapsed=0
 DockId=0x00000011,0
 
 [Window][Animator/Animator_57EA216E/Animated Properties_0E80DA04]
 IsChild=1
-Size=226,170
+Size=226,214
 
 [Window][Animator/Animator_57EA216E/Animated Properties_0E80DA04/Manage Animation_CF029C7C]
 IsChild=1
@@ -469,21 +469,21 @@ Column 5  Width=-1
 
 [Docking][Data]
 DockNode            ID=0x00000007 Pos=375,142 Size=550,588 Selected=0xE87781F4
-DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1920,1017 Split=Y Selected=0x642CEEBB
-  DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=1500,823 Split=X
-    DockNode        ID=0x0000000A Parent=0x00000001 SizeRef=318,691 Split=Y Selected=0x29EABFBD
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1920,986 Split=Y Selected=0x642CEEBB
+  DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=1500,779 Split=X
+    DockNode        ID=0x0000000A Parent=0x00000001 SizeRef=314,691 Split=Y Selected=0x29EABFBD
       DockNode      ID=0x00000012 Parent=0x0000000A SizeRef=276,383 Split=Y Selected=0x29EABFBD
         DockNode    ID=0x00000005 Parent=0x00000012 SizeRef=310,32 Split=Y Selected=0xF4A28255
           DockNode  ID=0x00000010 Parent=0x00000005 SizeRef=310,33 HiddenTabBar=1 Selected=0xF4A28255
           DockNode  ID=0x00000011 Parent=0x00000005 SizeRef=310,349 Selected=0x7AD9D477
         DockNode    ID=0x00000006 Parent=0x00000012 SizeRef=310,328 Selected=0x29EABFBD
-      DockNode      ID=0x00000013 Parent=0x0000000A SizeRef=276,439 Selected=0xA2010517
-    DockNode        ID=0x0000000D Parent=0x00000001 SizeRef=1601,691 Split=Y Selected=0x08AA43A5
+      DockNode      ID=0x00000013 Parent=0x0000000A SizeRef=276,395 Selected=0xA2010517
+    DockNode        ID=0x0000000D Parent=0x00000001 SizeRef=1605,691 Split=Y Selected=0x08AA43A5
       DockNode      ID=0x0000000F Parent=0x0000000D SizeRef=1308,403 Split=X Selected=0x642CEEBB
-        DockNode    ID=0x00000008 Parent=0x0000000F SizeRef=1250,645 CentralNode=1 Selected=0x08AA43A5
+        DockNode    ID=0x00000008 Parent=0x0000000F SizeRef=1254,645 CentralNode=1 Selected=0x642CEEBB
         DockNode    ID=0x00000009 Parent=0x0000000F SizeRef=350,645 Selected=0xE7039252
       DockNode      ID=0x00000003 Parent=0x0000000D SizeRef=1308,205 Selected=0x8E5F85DE
-  DockNode          ID=0x0000000E Parent=0x8B93E3BD SizeRef=1500,193 Split=X Selected=0x0340EFE6
+  DockNode          ID=0x0000000E Parent=0x8B93E3BD SizeRef=1500,237 Split=X Selected=0x0340EFE6
     DockNode        ID=0x0000000B Parent=0x0000000E SizeRef=986,306 Split=X Selected=0x843B4BFE
       DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=727,294 Selected=0x64F50EE5
       DockNode      ID=0x00000004 Parent=0x0000000B SizeRef=258,294 Selected=0xED03171C
